--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.116.1",
+    "langchain>=0.3.27",
+    "langchain-cohere>=0.4.4",
+    "onnxruntime==1.20.1; platform_system == 'Windows'",
 ]
 
 [dependency-groups]
