--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "dotenv>=0.9.9",
     "fastapi[standard]>=0.116.1",
     "langchain>=0.3.27",
     "langchain-cohere>=0.4.4",
+    "langchain-community>=0.3.27",
     "onnxruntime==1.20.1; platform_system == 'Windows'",
+    "unstructured>=0.18.11",
+    "cohere==5.15.0"
 ]
 
 [dependency-groups]
